--- a/style.css
+++ b/style.css
@@ -445,7 +445,10 @@ box-shadow: 0px 0px 8px 2px rgba(204, 201, 201, 0.5);
                                                                                                                   /* Medai-Quruyyyyy */
 @media (max-width: 768px){
 
-
+     .figure img{
+        width: 400px;
+        height: 100px;
+    } 
     .feature p{
         font-size: 10px;
         text-align: left;
